# Graph-Skill

./: .gitignore  Makefile  README.md
.github/workflows/: test.yml
deploy/docker/: docker-compose.test.yml
docs/: RFC-00-architecture-overview.md  RFC-01-data-specification-storage-layer.md  RFC-02-offline-ingestion-pipeline.md  RFC-03-online-routing-gateway.md  RFC-04-runtime-integration-layer.md  RFC-05-telemetry-self-evolution-feedback.md  RFC-06-performance-security-high-availability.md  RFC-07-api-interface-specification.md  RFC-08-data-structures-schema.md  RFC-09-deployment-operations.md  RFC-10-testing-quality-assurance.md  RFC-11-security-permission-model.md  docs_plan.md
docs/diagrams/: graphskill-2.2.drawio  graphskill-2.drawio  grathskill-1.2.drawio  skill-compiler-内部图.drawio
schemas/json/: routing-request-v1.json  routing-response-v1.json  skill-manifest-v1.json  skill-node-v1.json
src/python/: README.md  conftest.py  pyproject.toml
src/python/graphskill/: __init__.py
src/python/graphskill/api/: __init__.py
src/python/graphskill/core/: __init__.py  constants.py  exceptions.py  models.py
src/python/graphskill/ingestion/: __init__.py  watcher.py
src/python/graphskill/ingestion/dag/: __init__.py  cycle_detector.py  dag_validator.py  dependency_resolver.py
src/python/graphskill/ingestion/extractor/: __init__.py  prompts.py  relation_resolver.py  topology_extractor.py
src/python/graphskill/ingestion/importer/: __init__.py  batch_importer.py  dual_writer.py  incremental_importer.py
src/python/graphskill/ingestion/parser/: __init__.py  ast_parser.py  markdown_parser.py  yaml_parser.py
src/python/graphskill/ingestion/validator/: __init__.py  permission_validator.py  schema_validator.py  static_validator.py
src/python/graphskill/routing/: __init__.py  conflict_pruner.py  context_assembler.py  embedding_service.py  gateway.py  hybrid_retriever.py  models.py  query_processor.py  scoring_engine.py
src/python/graphskill/runtime/: __init__.py  injection.py  models.py  permission.py  session.py
src/python/graphskill/storage/: __init__.py  cache.py  graph_db.py  vector_db.py
src/python/graphskill/telemetry/: __init__.py  decay.py  models.py  tracer.py
src/python/graphskill/utils/: __init__.py
src/python/tests/: __init__.py
src/python/tests/e2e/: __init__.py
src/python/tests/e2e/dataset/skills/: code-search.SKILL.md  db-query.SKILL.md  file-read.SKILL.md  git-commit.SKILL.md  web-fetch.SKILL.md
src/python/tests/e2e/ingestion/: test_full_ingestion_e2e.py  test_topology_extraction_e2e.py
src/python/tests/fixtures/: conftest.py
src/python/tests/integration/: __init__.py
src/python/tests/integration/extractor_dag/: test_extractor_dag_integration.py
src/python/tests/integration/importer_storage/: test_storage_integration.py
src/python/tests/integration/parser_validator/: test_parser_validator_integration.py
src/python/tests/integration/watcher_importer/: test_watcher_importer_integration.py
src/python/tests/performance/: __init__.py
src/python/tests/performance/benchmark/: test_parser_benchmark.py  test_storage_benchmark.py
src/python/tests/performance/concurrency/: test_concurrent_import.py
src/python/tests/unit/: __init__.py  test_exceptions.py  test_models.py
src/python/tests/unit/dag/: test_cycle_detector.py  test_dag_validator.py  test_dependency_resolver.py
src/python/tests/unit/extractor/: test_relation_resolver.py  test_topology_extractor.py
src/python/tests/unit/importer/: test_batch_importer.py  test_dual_writer.py
src/python/tests/unit/parser/: test_ast_parser.py  test_markdown_parser.py  test_yaml_parser.py
src/python/tests/unit/routing/: __init__.py  test_conflict_pruner.py  test_context_assembler.py  test_embedding_service.py  test_gateway.py  test_hybrid_retriever.py  test_query_processor.py  test_routing_models.py  test_scoring_engine.py
src/python/tests/unit/runtime/: __init__.py  test_injection.py  test_models.py  test_permission.py  test_session.py
src/python/tests/unit/storage/: test_cache.py  test_milvus_client.py  test_redis_client.py
src/python/tests/unit/telemetry/: __init__.py  test_decay.py  test_models.py  test_tracer.py
src/python/tests/unit/validator/: test_permission_validator.py  test_schema_validator.py  test_static_validator.py
src/python/tests/unit/watcher/: test_watcher.py
